Closed Bug 1725270 Opened 4 years ago Closed 4 years ago

Fission warmload regression from null principal isolation

Categories

(Core :: DOM: Navigation, defect)

defect

Tracking

()

VERIFIED FIXED
93 Branch
Fission Milestone M8
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox91 --- unaffected
firefox92 --- unaffected
firefox93 --- verified

People

(Reporter: cpeterson, Assigned: nika)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Jesup says:

I see major regressions in warmload in the last day or two for fission; if you look a the graphs at https://drive.google.com/drive/folders/1UvXyaWTMmrf8s6h0ZxGH7fkOnkeb_p2F?usp=sharing. You can see spikes for fission at the end. The average moves more slowly (of course), but the spikes are large enough I see it even in the averages (in the graphs, and at https://docs.google.com/spreadsheets/d/1dVXTypCkosetd5KyBbNP5vgWzxm4fr6fxhzbicx4Dyo/edit#gid=1965470853 (and see the summary tab as well, though the graphs are a work-in-progress)

quite visible in https://arewefastyet.com/linux64/warm-page-load/overview?numDays=90&series=Firefox,Firefox-Fission as well.

Nika says:

the regression is caused by an extra process switch for every intermediate about:blank load.

I think there was a plan to potentially add a workaround pref which could be set in perf tests to make these about:blank loads act in the way they used to so that the test continues running as expected

The about:blank is loaded in the web content process, rather than the microsoft.com content process or whatever, so there will be an extra process switch there

Adds a pref to perform about:blank document loads which have system
triggering principals within the existing process, rather than doing a
process switch. This can be used in performance tests which load
about:blank and do not expect process switches.

Attachment #9235889 - Attachment description: WIP: Bug 1725270 - Part 1: Add testing pref to get old about:blank process behavior → Bug 1725270 - Add testing pref to get old about:blank process selection behavior, r=jesup
Pushed by nlayzell@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/50435d7ca25a Add testing pref to get old about:blank process selection behavior, r=jesup
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
Fission Milestone: ? → M8

This fix landed on 2021-08-13. Randell confirmed that the page load regressions went away on 2021-08-14,

Status: RESOLVED → VERIFIED

== Change summary for alert #30939 (as of Mon, 16 Aug 2021 11:17:31 GMT) ==

Improvements:

Ratio Test Platform Options Absolute values (old vs new)
12% about_preferences_basic macosx1014-64-shippable-qr e10s stylo webrender-sw 111.54 -> 98.56
11% about_preferences_basic windows10-64-shippable-qr e10s stylo webrender 107.29 -> 95.17

For up to date results, see: https://treeherder.mozilla.org/perfherder/alerts?id=30939

== Change summary for alert #30945 (as of Mon, 16 Aug 2021 17:11:47 GMT) ==

Improvements:

Ratio Test Platform Options Absolute values (old vs new)
50% welcome FirstVisualChange windows10-64-shippable-qr warm webrender 80.00 -> 40.00
36% welcome loadtime macosx1014-64-shippable-qr warm webrender 37.33 -> 24.00
25% welcome dcf windows10-64-shippable-qr warm webrender 27.71 -> 20.83
25% welcome loadtime windows10-64-shippable-qr warm webrender 30.96 -> 23.29
23% welcome dcf linux1804-64-shippable-qr warm webrender 35.06 -> 27.12
... ... ... ... ...
2% welcome SpeedIndex linux1804-64-shippable-qr warm webrender 1,241.58 -> 1,211.67

For up to date results, see: https://treeherder.mozilla.org/perfherder/alerts?id=30945

Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: