Bug 1725270 - Add testing pref to get old about:blank process selection behavior, r=jesup

Adds a pref to perform about:blank document loads which have system
triggering principals within the existing process, rather than doing a
process switch. This can be used in performance tests which load
about:blank and do not expect process switches.

Differential Revision: https://phabricator.services.mozilla.com/D122405